import { GestionTipo } from '../dto/gestion.enum';

export interface GestionInfo {
  tipo: GestionTipo;
  entidadId: number;
}
