export enum GestionTipo {
  EMPRESA = 'EMPRESA',
  ORGANIZACION = 'ORGANIZACION',
}
